# RaspberryPi_pico_calculator_

./: CMakeLists.txt  README.md  calculator.c
